IF (HAVE_JPEG)
    SET (playerjpegSrcs playerjpeg.c)

    PLAYER_ADD_LIBRARY (playerjpeg ${playerjpegSrcs})
    TARGET_LINK_LIBRARIES (playerjpeg jpeg)
    PLAYERCORE_ADD_INT_LINK_LIB (jpeg)
    PLAYER_INSTALL_HEADERS (playerjpeg playerjpeg.h)
ELSE (HAVE_JPEG)
    MESSAGE (STATUS "JPEG support not included.")
ENDIF (HAVE_JPEG)
