OPTION (INCLUDE_TCP "Include the TCP transport layer" ON)
OPTION (INCLUDE_UDP "Include the UDP transport layer" ON)

INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/libplayercore)

IF (INCLUDE_TCP)
    OPTION (ENABLE_TCP_NODELAY "Turn off Nagel's buffering algorithm (which may increase socket latency when used)" OFF)

    SET (playertcpSrcs socket_util.c playertcp.cc remote_driver.cc)
    IF(NOT HAVE_POLL)
      SET(playertcpSrcs ${playertcpSrcs} ../replace/poll.c)
    ENDIF(NOT HAVE_POLL)
    IF(NOT HAVE_COMPRESSBOUND)
      SET(playertcpSrcs ${playertcpSrcs} ../replace/compressBound.c)
    ENDIF(NOT HAVE_COMPRESSBOUND)
    PLAYER_ADD_LIBRARY (playertcp ${playertcpSrcs})
    TARGET_LINK_LIBRARIES (playertcp playercore playererror playerutils playerxdr)
    IF (HAVE_Z)
        TARGET_LINK_LIBRARIES (playertcp z)
        PLAYER_ADD_LINK_LIB (z)
    ENDIF (HAVE_Z)
    PLAYER_MAKE_PKGCONFIG ("playertcp" "Player TCP messaging library - part of the Player Project" "playererror playercore" "" "" "")

    PLAYER_INSTALL_HEADERS (playertcp playertcp.h)
ENDIF (INCLUDE_TCP)

IF (INCLUDE_UDP)
    SET (playerudpSrcs playerudp.cc)
    IF(NOT HAVE_POLL)
      SET(playerudpSrcs ${playerudpSrcs} ../replace/poll.c)
    ENDIF(NOT HAVE_POLL)
    IF(NOT HAVE_COMPRESSBOUND)
      SET(playerudpSrcs ${playerudpSrcs} ../replace/compressBound.c)
    ENDIF(NOT HAVE_COMPRESSBOUND)
    PLAYER_ADD_LIBRARY (playerudp ${playerudpSrcs})
    TARGET_LINK_LIBRARIES (playerudp playercore playererror playerutils playerxdr)
    TARGET_LINK_LIBRARIES (playerudp z)
    PLAYER_MAKE_PKGCONFIG ("playerudp" "Player UDP messaging library - part of the Player Project" "playererror playercore" "" "" "")

    PLAYER_INSTALL_HEADERS (playertcp playerudp.h)
ENDIF (INCLUDE_UDP)
